# mimebytes

./: .gitignore  LICENSE  README.md  pyproject.toml
mimebytes/: __init__.py  _version.py  base.py  image.py  mime.py
